[package]
name = "ddsc"
version = "0.1.2"
authors = ["kydos <angelo@icorsaro.net>", "Esteve Fernandez <esteve@apache.org>"]
license = "Apache-2.0"
readme = "README.md"
keywords = ["DDS", "CycloneDDS"]
repository = "https://github.com/atolabs/cdds-rust"
documentation = "https://docs.rs/ddsc"
description = """
High-level API for the native CycloneDDS bindings (libddsc-sys).
"""
categories = ["api-bindings"]
edition = "2021"

[lib]
name = "dds"

[dependencies]
libc = "0.2.126"
libddsc-sys = { path = "../libddsc-sys", version = "0.1.2" }
serde = { version = "1.0.137", features = ["derive"], optional = true }

[features]
default = []
static = ["libddsc-sys/static"]
